--- a/Portfolio.html
+++ b/Portfolio.html
@@ -55,11 +55,7 @@
     <div id="box4">
         <h3 id="info">Information</h3>
         <p id="para4">
-            <b>emails: </b><br>tdposey@icloud.com<br>
-            t132posey@gmail.com<br>
-            tposey@gmu.edu<br>
-            <b>Phone Number: </b><br>
-            (703) 478-4288<br>
+            Information is in resume
         </p>
     </div>
 
